Arrangement du site

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             color: #ffffff;
         }
         .content .text p {
-            background-color: rgba(0, 0, 0, 0.5);
+            background-color: rgba(0, 0, 0, 0.7);
             border-radius: 8px;
             margin-right: 10px;
             padding: 20px;
@@ -113,7 +113,7 @@
     <header>
         <div class="header-top">
             <img src="./img/logo5.png" alt="Logo" class="logo">
-            <h1>Exposition Virtuelle - Jeux Vidéo</h1>
+            <h1>L'Odyssée des Jeux Vidéo</h1>
         </div>
         <nav>
             <a href="#section1">Les Origines</a>
